--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             margin-top: none;
             padding-top: 13px;
             padding-bottom: 13px;
+            padding-left: 30px;
             color: #0000008A;
             width: 100%;
             background: #f2f2f2;
@@ -159,6 +160,7 @@
             font-size: 14px;
             margin-top: none;
             padding-top: 13px;
+            padding-left: 30px;
             color: #0000008A;
             width: 100%;
             background: #f2f2f2;
@@ -166,6 +168,8 @@
             grid-template-rows: 1fr;
             grid-template-columns: auto 70px auto;            
             grid-gap: 19px;
+            padding-bottom: 25px;
+            margin-bottom: -50px;
         }
 
         .privacy {
