--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             font-size: 16px; 
             font-family: arial, sans-serif;
             color: rgba(0,0,0,0.87);
+            min-height: 100vh;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
         }
 
         a {
@@ -128,9 +132,13 @@
             font-size: 13px;
             }
 
+        .footer {
+            flex-shrink: 0;
+        }
+
         .foot {
             font-size: 15px;
-            margin-top: 100px;
+            /*margin-top: 100px;*/
             padding-top: 13px;
             padding-bottom: 13px;
             padding-left: 30px;
@@ -169,7 +177,7 @@
             grid-template-columns: auto 70px auto;            
             grid-gap: 19px;
             padding-bottom: 25px;
-            margin-bottom: -50px;
+            /*margin-bottom: -50px;*/
         }
 
         .privacy {
@@ -190,6 +198,10 @@
         color:blue;
     }
 
+    .content {
+        flex: 1 0 auto;
+    }
+
     </style>
 
 <title>Google</title>
@@ -198,7 +210,7 @@
 
 
 <body>
-
+<div class = "content">
     <nav>
         <div class="container">
             <div class="d1">About</div>
@@ -228,9 +240,9 @@
 </p>
 </div>
 
+</div>
 
-
-<footer>
+<footer class = "footer">
     <div class="foot">Canada</div>
     <div class="lowfoot">
         <div class="privacy"><a href="https://policies.google.com/privacy">Privacy</a></div>
